--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-Flask==2.0.1
-requests==2.26.0
-scikit-learn==0.24.2
-numpy==1.21.2
+flask
+requests
+scikit-learn
+waitress
+numpy
+pytest
+gunicorn
